k3s/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: nginx
        image: ghcr.io/sertacengin/web-app:latest
        imagePullPolicy: Always

        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 500m
